welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
extrema:4: error: not found: value length
  for(i <- 1 to length -1){
                ^